--- a/index.html
+++ b/index.html
@@ -100,28 +100,22 @@
         <section id="contact">
             <h3>Contact</h3>
             <p>Please fill out this form and I'll connect with you soon.</p>
-
-            <form action="" method="POST">
-                <legend>Your Contact Information</legend>
-                <label for="name">Name </label>
-                <br>
-                <input type="text" name="name" id="name">
-                <br>
-                <label for="email">Email Address </label>
-                <br>
-                <input type="email" name="email" id="email">
-                <br>
-                <label for="message">Message </label>
-                <br>
-                <textarea name="message" id="message"></textarea>
-                <br>
-                <input type="submit" name="my-submit" id="my-submit">
+            <form>
+                <fieldset>
+                    <legend>Your Contact Information</legend>
+                    <label for="name">Name</label>
+                    <input type="text" name="name" id="name" value="Your full name">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email" value="enter your email address">
+                    <label for="message">Message</label> 
+                    <input type="text" name="message" id="message" value="what can i help you with?">
+                    <input type="submit" value="submit" id="submit">
+                </fieldset>
             </form>
         </section>
-
+        </main>
         <footer>
             <p><small>Copyright &copy;2021 TK Photography</small></p>
         </footer>
-    </main>
 </body>
 </html>
