--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
                     <label for="name">Name</label>
                     <input type="text" name="name" id="name" value="Your full name">
                     <label for="email">Email</label>
-                    <input type="email" name="email" id="email" value="enter your email address">
+                    <input type="email" name="email" id="email" value="Enter your email address">
                     <label for="message">Message</label> 
-                    <input type="text" name="message" id="message" value="what can i help you with?">
+                    <input type="text" name="message" id="message" value="What can I help you with?">
                     <input type="submit" value="submit" id="submit">
                 </fieldset>
             </form>
