--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
         <h2>Main Navigation</h2>
         <ul>
           <li><a href="#about">About</a></li>
-          <li><a href="#gallery">Gallery<br/>Songs</a></li>
+          <li><a href="#gallery">Gallery</a></li>
           <li><a href="#contact">Contact</a></li>
-          <li><a href="#top">top</a></li>
+          <li><a href="#top">Top</a></li>
         </ul>
     </nav>
 
     <main>
         <section id="about">
-            <h3>About</h3>
-            <p>Hello! 
+            <h2>About</h2>
+            <p>Hello! <br><br>
                 I'm TK and I'm a photographer. I love looking at life through the lens of my camera. Landscape photography is my speciality and it's taken me all over the world. 
                 </p>
         </section>
 
         <section id="gallery">
-            <h3>Gallery</h3>
+            <h2>Gallery</h2>
             <p>Here are some highlights of my work. The locations and year are in the caption. </p>
 
             <figure>
@@ -98,7 +98,7 @@
         </section>
 
         <section id="contact">
-            <h3>Contact</h3>
+            <h2>Contact</h2>
             <p>Please fill out this form and I'll connect with you soon.</p>
             <form>
                 <fieldset>
