--- a/index.html
+++ b/index.html
@@ -34,18 +34,16 @@
 
         <section id="gallery">
             <h2>Gallery</h2>
-            <p>Here are some highlights of my work. The locations and year are in the caption. </p>
-
+            <p>Here are some highlights of my work. The locations and year are in the caption.</p>
+            <section id="photo-grid">
             <figure>
                 <img src="images/Chile.png" alt="photo of Chile">
                 <figcaption>Chile, 2001</figcaption>
             </figure>
-
             <figure>
                 <figcaption>Guatemala, 1997</figcaption>
                 <img src="images/Guatemala.png" alt="photo of Guatemala">
             </figure>
-
             <figure>
                 <img src="images/Hawaii.png" alt="photo of Hawaii">
                 <figcaption>Hawaii, 2010</figcaption>
@@ -95,6 +93,7 @@
                 <figcaption>Wyoming, 2021</figcaption>
                 <img src="images/Wyoming.png" alt="photo of Wyoming">
             </figure>
+            </section>
         </section>
 
         <section id="contact">
