--- a/index.html
+++ b/index.html
@@ -38,59 +38,59 @@
             <section id="photo-grid">
             <figure>
                 <img src="images/Chile.png" alt="photo of Chile">
-                <figcaption>Chile, 2001</figcaption>
+                <figcaption id="chile" class="figcaptionbottom">Chile, 2001</figcaption>
             </figure>
             <figure>
-                <figcaption>Guatemala, 1997</figcaption>
+                <figcaption id="guatemala" class="figcaptiontop">Guatemala, 1997</figcaption>
                 <img src="images/Guatemala.png" alt="photo of Guatemala">
             </figure>
             <figure>
                 <img src="images/Hawaii.png" alt="photo of Hawaii">
-                <figcaption>Hawaii, 2010</figcaption>
+                <figcaption id="hawaii" class="figcaptionbottom">Hawaii, 2010</figcaption>
             </figure>
 
             <figure>
-                <figcaption>Iran, 1999</figcaption>
+                <figcaption class="figcaptiontop">Iran, 1999</figcaption>
                 <img src="images/Iran.png" alt="photo of Iran">
             </figure>
 
             <figure>
-                <figcaption>Ireland, 2012</figcaption>
+                <figcaption class="figcaptiontop">Ireland, 2012</figcaption>
                 <img src="images/Ireland.png" alt="photo of Ireland">
             </figure>
 
             <figure>
                 <img src="images/Italy.png" alt="photo of Italy">
-                <figcaption>Italy, 2015</figcaption>
+                <figcaption class="figcaptionbottom">Italy, 2015</figcaption>
             </figure>
 
             <figure>
                 <img src="images/Moab-Desert.png" alt="photo of Moab Desert">
-                <figcaption>Moab-Desert, 2020</figcaption>
+                <figcaption id="moab" class="figcaptionbottom">Moab-Desert, 2020</figcaption>
             </figure>
 
             <figure>
-                <figcaption>Rocky Mountains, 2009</figcaption>
+                <figcaption class="figcaptiontop">Rocky Mountains, 2009</figcaption>
                 <img src="images/Rocky-Mountains.png" alt="photo of Rocky Mountains">
             </figure>
 
             <figure>
-                <figcaption>Switzerland, 2014</figcaption>
+                <figcaption class="figcaptiontop">Switzerland, 2014</figcaption>
                 <img src="images/Switzerland.png" alt="photo of Switzerland"> 
             </figure>
 
             <figure>
-                <figcaption>UK, 2005</figcaption>
+                <figcaption class="figcaptiontop">UK, 2005</figcaption>
                 <img src="images/UK.png" alt="photo of UK">  
             </figure>
 
             <figure>
-                <figcaption>USA, 2021</figcaption>
+                <figcaption class="figcaptiontop">USA, 2021</figcaption>
                 <img src="images/USA.png" alt="photo of USA">
             </figure>
 
             <figure>
-                <figcaption>Wyoming, 2021</figcaption>
+                <figcaption id="wyoming" class="figcaptiontop">Wyoming, 2021</figcaption>
                 <img src="images/Wyoming.png" alt="photo of Wyoming">
             </figure>
             </section>
