--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 <figcaption id="chile" class="figcaptionbottom">Chile, 2001</figcaption>
             </figure>
             <figure>
-                <figcaption id="guatemala" class="figcaptiontop">Guatemala, 1997</figcaption>
                 <img src="images/Guatemala.png" alt="photo of Guatemala">
+                <figcaption id="guatemala" class="figcaptiontop">Guatemala, 1997</figcaption>
             </figure>
             <figure>
                 <img src="images/Hawaii.png" alt="photo of Hawaii">
@@ -50,13 +50,13 @@
             </figure>
 
             <figure>
-                <figcaption class="figcaptiontop">Iran, 1999</figcaption>
                 <img src="images/Iran.png" alt="photo of Iran">
+                <figcaption id="iran" class="figcaptiontop">Iran, 1999</figcaption>
             </figure>
 
             <figure>
-                <figcaption class="figcaptiontop">Ireland, 2012</figcaption>
                 <img src="images/Ireland.png" alt="photo of Ireland">
+                <figcaption id="ireland" class="figcaptiontop">Ireland, 2012</figcaption>
             </figure>
 
             <figure>
@@ -70,28 +70,28 @@
             </figure>
 
             <figure>
-                <figcaption class="figcaptiontop">Rocky Mountains, 2009</figcaption>
                 <img src="images/Rocky-Mountains.png" alt="photo of Rocky Mountains">
+                <figcaption class="figcaptiontop">Rocky Mountains, 2009</figcaption>
             </figure>
 
             <figure>
-                <figcaption class="figcaptiontop">Switzerland, 2014</figcaption>
                 <img src="images/Switzerland.png" alt="photo of Switzerland"> 
+                <figcaption class="figcaptiontop">Switzerland, 2014</figcaption>
             </figure>
 
             <figure>
-                <figcaption class="figcaptiontop">UK, 2005</figcaption>
                 <img src="images/UK.png" alt="photo of UK">  
+                <figcaption class="figcaptiontop">UK, 2005</figcaption>
             </figure>
 
             <figure>
-                <figcaption class="figcaptiontop">USA, 2021</figcaption>
                 <img src="images/USA.png" alt="photo of USA">
+                <figcaption class="figcaptiontop">USA, 2021</figcaption>
             </figure>
 
             <figure>
-                <figcaption id="wyoming" class="figcaptiontop">Wyoming, 2021</figcaption>
                 <img src="images/Wyoming.png" alt="photo of Wyoming">
+                <figcaption id="wyoming" class="figcaptiontop">Wyoming, 2021</figcaption>
             </figure>
             </section>
         </section>
