--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <section id="gallery">
             <h2>Gallery</h2>
             <p>Here are some highlights of my work. The locations and year are in the caption.</p>
-            <section id="photo-grid">
+            <div id="photo-grid">
             <figure>
                 <img src="images/Chile.png" alt="photo of Chile">
                 <figcaption id="chile" class="figcaptionbottom">Chile, 2001</figcaption>
@@ -93,7 +93,7 @@
                 <img src="images/Wyoming.png" alt="photo of Wyoming">
                 <figcaption id="wyoming" class="figcaptiontop">Wyoming, 2021</figcaption>
             </figure>
-            </section>
+        </div>
         </section>
 
         <section id="contact">
